--- a/style.css
+++ b/style.css
@@ -28,3 +28,26 @@
 	background-color: #555;
 	outline: none;
 }
+
+.href {
+	text-decoration: none;
+	color: rgb(14, 82, 255);
+}
+
+.href:hover {
+	text-decoration: underline;
+}
+
+.article-list-element-title {
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	font-size: 30px;
+	color: #333;
+	padding: 5px;
+}
+
+.article-list-element {
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	font-size: 20px;
+	color: #c4c4c4;
+	border-radius: 5px;
+}
