--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@
 
 .article-list-element {
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-	font-size: 20px;
-	color: #c4c4c4;
+	font-size: 15px;
+	color: #ccc;
 	border-radius: 5px;
 }
