--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@
 }
 
 .href {
+	padding-left: 5px;
 	text-decoration: none;
 	color: rgb(14, 82, 255);
 }
@@ -48,6 +49,7 @@
 .article-list-element {
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 	font-size: 15px;
-	color: #ccc;
+	background-color: #ccc;
+	padding: 5px;
 	border-radius: 5px;
 }
