--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
 }
 
 .href {
-	padding-left: 5px;
+	margin-left: 5px;
 	text-decoration: none;
 	color: rgb(14, 82, 255);
 }
@@ -49,7 +49,8 @@
 .article-list-element {
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 	font-size: 15px;
-	background-color: #ccc;
+	background-color: #fff;
 	padding: 5px;
 	border-radius: 5px;
+	margin-bottom: 5px;
 }
