--- a/style.css
+++ b/style.css
@@ -73,19 +73,19 @@
 	font-size: 15px;
 	font-family: 'Times New Roman', Times, serif;
 }
-p1 {
+h1 {
+	font-size: 24px;
+	font-family: 'Times New Roman', Times, serif;
+}
+h2 {
+	font-size: 22px;
+	font-family: 'Times New Roman', Times, serif;
+}
+h3 {
 	font-size: 20px;
 	font-family: 'Times New Roman', Times, serif;
 }
-p2 {
+h4 {
 	font-size: 18px;
-	font-family: 'Times New Roman', Times, serif;
-}
-p3 {
-	font-size: 16px;
-	font-family: 'Times New Roman', Times, serif;
-}
-p4 {
-	font-size: 14px;
 	font-family: 'Times New Roman', Times, serif;
 }
