--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@
 	font-size: 15px;
 	font-family: 'Times New Roman', Times, serif;
 }
-code, pre.sourceCode {
+code, code * {
 	font-family: 'Consolas', 'ubuntu mono', 'Courier New', Courier, monospace;
 	font-size: 15px;
 }
