--- a/style.css
+++ b/style.css
@@ -8,9 +8,15 @@
 	background-color: #333;
 }
 
+td {
+	word-wrap:break-word;
+	word-break:break-all;
+}
+
 table {
 	font-family: 'Times New Roman', Times, serif;
 	font-size: 14px;
+	table-layout:fixed;
 }
 
 .topbar-element {
