--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 td {
 	white-space: pre-wrap;
 	word-wrap: break-word;
-	word-break: normal;
+	word-break: break-all;
 }
 
 table {
@@ -20,7 +20,7 @@ table {
 	table-layout:fixed;
 	white-space: pre-wrap;
 	word-wrap: break-word;
-	word-break: normal;
+	word-break: break-all;
 }
 
 .topbar-element {
